feat(jakarta/common): introduce enum validator - [x] mv redisson-service{api,impl} to redisson module,origin redisson mv to sub module redisson-client - [x] add AcceptedEnumValidator,EnumPatternValidator,EnumClassValidator - [x] update dotenv scripts.sh - [x] add startRedis task for test - [x] create ValueChecker and NullChecker interceptor - [x] add annotations to music services